libusb/libusb/libusb.h

#define ssize_t __int64
#define ssize_t long

/* libusb */

struct libusb_context;

struct libusb_device;

struct libusb_device_handle;


/** \ingroup lib
 * Structure representing a libusb session. The concept of individual libusb
 * sessions allows for your program to use two libraries (or dynamically
 * load two modules) which both independently use libusb. This will prevent
 * interference between the individual libusb users - for example
 * libusb_set_debug() will not affect the other user of the library, and
 * libusb_exit() will not destroy resources that the other user is still
 * using.
 *
 * Sessions are created by libusb_init() and destroyed through libusb_exit().
 * If your application is guaranteed to only ever include a single libusb
 * user (i.e. you), you do not have to worry about contexts: pass NULL in
 * every function call where a context is required. The default context
 * will be used.
 *
 * For more information, see \ref contexts.
 */
typedef struct libusb_context libusb_context;


/** \ingroup dev
 * Structure representing a USB device detected on the system. This is an
 * opaque type for which you are only ever provided with a pointer, usually
 * originating from libusb_get_device_list().
 *
 * Certain operations can be performed on a device, but in order to do any
 * I/O you will have to first obtain a device handle using libusb_open().
 *
 * Devices are reference counted with libusb_device_ref() and
 * libusb_device_unref(), and are freed when the reference count reaches 0.
 * New devices presented by libusb_get_device_list() have a reference count of
 * 1, and libusb_free_device_list() can optionally decrease the reference count
 * on all devices in the list. libusb_open() adds another reference which is
 * later destroyed by libusb_close().
 */
typedef struct libusb_device libusb_device;



/** \ingroup dev
 * Structure representing a handle on a USB device. This is an opaque type for
 * which you are only ever provided with a pointer, usually originating from
 * libusb_open().
 *
 * A device handle is used to perform I/O and other operations. When finished
 * with a device handle, you should call libusb_close().
 */
typedef struct libusb_device_handle libusb_device_handle;


/** \ingroup misc
 * Error codes. Most libusb functions return 0 on success or one of these
 * codes on failure.
 * You can use libusb_strerror() to retrieve a short string description of
 * a libusb_error enumeration value.
 */
enum libusb_error {
	/** Success (no error) */
	LIBUSB_SUCCESS = 0,

	/** Input/output error */
	LIBUSB_ERROR_IO = -1,

	/** Invalid parameter */
	LIBUSB_ERROR_INVALID_PARAM = -2,

	/** Access denied (insufficient permissions) */
	LIBUSB_ERROR_ACCESS = -3,

	/** No such device (it may have been disconnected) */
	LIBUSB_ERROR_NO_DEVICE = -4,

	/** Entity not found */
	LIBUSB_ERROR_NOT_FOUND = -5,

	/** Resource busy */
	LIBUSB_ERROR_BUSY = -6,

	/** Operation timed out */
	LIBUSB_ERROR_TIMEOUT = -7,

	/** Overflow */
	LIBUSB_ERROR_OVERFLOW = -8,

	/** Pipe error */
	LIBUSB_ERROR_PIPE = -9,

	/** System call interrupted (perhaps due to signal) */
	LIBUSB_ERROR_INTERRUPTED = -10,

	/** Insufficient memory */
	LIBUSB_ERROR_NO_MEM = -11,

	/** Operation not supported or unimplemented on this platform */
	LIBUSB_ERROR_NOT_SUPPORTED = -12,

	/** Other error */
	LIBUSB_ERROR_OTHER = -99

	/* IMPORTANT: when adding new values to this enum, remember to
	   update the libusb_strerror() function implementation! */
};


int libusb_init(libusb_context **ctx);

void libusb_exit(libusb_context *ctx);

void libusb_set_debug(libusb_context *ctx, int level);

const char* libusb_strerror(enum libusb_error errcode);


ssize_t libusb_get_device_list(libusb_context *ctx, libusb_device ***list);

void libusb_free_device_list(libusb_device **list, int unref_devices);

libusb_device *libusb_ref_device(libusb_device *dev);

void libusb_unref_device(libusb_device *dev);


int libusb_get_configuration(libusb_device_handle *dev, int *config);

uint8_t libusb_get_bus_number(libusb_device *dev);

uint8_t libusb_get_device_address(libusb_device *dev);

int libusb_get_max_packet_size(libusb_device *dev, unsigned char endpoint);

int libusb_get_max_iso_packet_size(libusb_device *dev, unsigned char endpoint);


int libusb_open(libusb_device *dev, libusb_device_handle **handle);

void libusb_close(libusb_device_handle *dev_handle);

libusb_device *libusb_get_device(libusb_device_handle *dev_handle);


int libusb_set_configuration(libusb_device_handle *dev, int configuration);

int libusb_claim_interface(libusb_device_handle *dev, int interface_number);

int libusb_release_interface(libusb_device_handle *dev, int interface_number);


libusb_device_handle *libusb_open_device_with_vid_pid(libusb_context *ctx, uint16_t vendor_id, uint16_t product_id);


int libusb_set_interface_alt_setting(libusb_device_handle *dev, int interface_number, int alternate_setting);

int libusb_clear_halt(libusb_device_handle *dev, unsigned char endpoint);

int libusb_reset_device(libusb_device_handle *dev);


int libusb_kernel_driver_active(libusb_device_handle *dev, int interface_number);

int libusb_detach_kernel_driver(libusb_device_handle *dev, int interface_number);

int libusb_attach_kernel_driver(libusb_device_handle *dev, int interface_number);