libusb.NET/Native/Functions.cs

//==================================================================================================
// $URL$
// $Author$
// $Date$
// $Revision$
// ------------------------------------------------------------------------------------------------
// See SVN change log for revision details.
// ------------------------------------------------------------------------------------------------
// Copyright © 2004 Mike Krüger.
// Copyright © 2010 Matthias Kläy.
// All rights reserved.
// ------------------------------------------------------------------------------------------------
// This source code is licensed under the GNU LGPL.
// See http://www.gnu.org/licenses/lgpl.html for license details.
//==================================================================================================

using System;
using System.Text;
using System.Security;
using System.Runtime.InteropServices;

/// <summary>
/// This namespace declares the native libusb elements.
/// Elements aren't documented for consistency/maintenance reasons. See libusb for documentation.
/// </summary>
namespace libusb.NET.Native
{
	/// <summary>
	/// Wraps all required native functions of libusb.
	/// </summary>
	/// <remarks>
	/// All original prototypes of the functions are included.
	/// However, only functions currently required are implemented.
	/// </remarks>
	public static class Functions
	{
		#region Constants
		//==========================================================================================
		// Constants
		//==========================================================================================

	#if WIN32 || WIN64
		public const int PathMax = 512;
	#else // Linux
		public const int PathMax = 4096 + 1;
	#endif

	#if WIN32
		#if !DEBUG
		    private const string LIBUSB_DLL = "libusb-1.0_Win32.dll";
		#else
			private const string LIBUSB_DLL = "libusb-1.0_Win32_Debug.dll";
		#endif
	#elif WIN64
		#if !DEBUG
		    private const string LIBUSB_DLL = "libusb-1.0_x64.dll";
		#else
		    private const string LIBUSB_DLL = "libusb-1.0_x64_Debug.dll";
		#endif
	#else // Linux
	    	private const string LIBUSB_DLL = "libusb";
	#endif

		private const CallingConvention CALLING_CONVENTION = CallingConvention.Cdecl;

		#endregion

		#region Static Lifetime
		//==========================================================================================
		// Static Lifetime
		//==========================================================================================

		static Functions()
		{
			libusb_init();
		}

		#endregion

		#region Methods
		//==========================================================================================
		// Methods
		//==========================================================================================

		#region Methods > libusb.h/core.c
		//------------------------------------------------------------------------------------------
		// Methods > libusb.h/core.c
		//------------------------------------------------------------------------------------------

		// ssize_t libusb_get_device_list(libusb_context *ctx, libusb_device ***list);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_get_device_list(IntPtr ctx, out libusb_device[] list);
		public  static        int libusb_get_device_list(out libusb_device[] list)
		{
			return (libusb_get_device_list(IntPtr.Zero, out list));
		}

		// void libusb_free_device_list(libusb_device **list, int unref_devices);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern void libusb_free_device_list(out libusb_device[] list, int unref_devices);
		public  static        void libusb_free_device_list(out libusb_device[] list, bool unref_devices)
		{
			libusb_free_device_list(out list, Convert.ToInt32(unref_devices));
		}

		// uint8_t libusb_get_bus_number(libusb_device *dev);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern byte libusb_get_bus_number(libusb_device dev);

		// uint8_t libusb_get_device_address(libusb_device *dev);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern byte libusb_get_device_address(libusb_device dev);

		// int libusb_get_max_packet_size(libusb_device *dev, unsigned char endpoint);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_get_max_packet_size(libusb_device dev, byte endpoint);

		// int libusb_get_max_iso_packet_size(libusb_device *dev, unsigned char endpoint);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_get_max_iso_packet_size(libusb_device dev, byte endpoint);
		
		// libusb_device *libusb_ref_device(libusb_device *dev);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern libusb_device libusb_ref_device(libusb_device dev);
		
		// void libusb_unref_device(libusb_device *dev);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern void libusb_unref_device(libusb_device dev);
		
		// int libusb_open(libusb_device *dev, libusb_device_handle **handle);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_open(libusb_device dev, out libusb_device_handle handle);
		
		// libusb_device_handle *libusb_open_device_with_vid_pid(libusb_context *ctx, uint16_t vendor_id, uint16_t product_id);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern libusb_device_handle libusb_open_device_with_vid_pid(IntPtr ctx, ushort vendor_id, ushort product_id);
		public  static        libusb_device_handle libusb_open_device_with_vid_pid(ushort vendor_id, ushort product_id)
		{
			return (libusb_open_device_with_vid_pid(IntPtr.Zero, vendor_id, product_id));
		}
		
		// void libusb_close(libusb_device_handle *dev_handle);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern void libusb_close(libusb_device_handle dev_handle);
		
		// libusb_device *libusb_get_device(libusb_device_handle *dev_handle);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern libusb_device libusb_get_device(libusb_device_handle dev_handle);
		
		// int libusb_get_configuration(libusb_device_handle *dev, int *config);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_get_configuration(libusb_device_handle dev, out int config);
		
		// int libusb_set_configuration(libusb_device_handle *dev, int configuration);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_set_configuration(libusb_device_handle dev, int configuration);
		
		// int libusb_claim_interface(libusb_device_handle *dev, int interface_number);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_claim_interface(libusb_device_handle dev, int interface_number);
		
		// int libusb_release_interface(libusb_device_handle *dev, int interface_number);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_release_interface(libusb_device_handle dev, int interface_number);
		
		// int libusb_set_interface_alt_setting(libusb_device_handle *dev, int interface_number, int alternate_setting);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_set_interface_alt_setting(libusb_device_handle dev, int interface_number, int alternate_setting);
		
		// int libusb_clear_halt(libusb_device_handle *dev, unsigned char endpoint);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_clear_halt(libusb_device_handle dev, byte endpoint);
		
		// int libusb_reset_device(libusb_device_handle *dev);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_reset_device(libusb_device_handle dev);
		
		// int libusb_kernel_driver_active(libusb_device_handle *dev, int interface_number);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_kernel_driver_active(libusb_device_handle dev, int interface_number);
		
		// int libusb_detach_kernel_driver(libusb_device_handle *dev, int interface_number);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_detach_kernel_driver(libusb_device_handle dev, int interface_number);
		
		// int libusb_attach_kernel_driver(libusb_device_handle *dev, int interface_number);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern int libusb_attach_kernel_driver(libusb_device_handle dev, int interface_number);
		
		// void libusb_set_debug(libusb_context *ctx, int level);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public  static extern void libusb_set_debug(IntPtr ctx, int level);
		private static        void libusb_set_debug(int level)
		{
			libusb_set_debug(IntPtr.Zero, level);
		}
		
		// int libusb_init(libusb_context **context);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern int libusb_init(IntPtr ctx);
		public  static        int libusb_init()
		{
			return (libusb_init(IntPtr.Zero));
		}
		
		// void libusb_exit(struct libusb_context *ctx);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		private static extern void libusb_exit(IntPtr ctx);
		public  static        void libusb_exit()
		{
			libusb_exit(IntPtr.Zero);
		}
		
		// const char* libusb_strerror(enum libusb_error errcode);
		[DllImport(LIBUSB_DLL, CallingConvention = CALLING_CONVENTION, ExactSpelling = true), SuppressUnmanagedCodeSecurity]
		public static extern string libusb_strerror(libusb_error errcode);

		#endregion

		#region Methods > libusb.h/descriptor.c
		//------------------------------------------------------------------------------------------
		// Methods > libusb.h/descriptor.c
		//------------------------------------------------------------------------------------------
